# recomb-biomc2

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  THANKS  bkp.tbz  configure  configure.ac
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
binaries/: biomc2  biomc2.distance  biomc2.sprdist
conftest.dir/sub/: conftest.TPo
doc/: copyleft.header  ctrl.biomc2
doc/doxigen/: biomc2.doxy
example/: ctrl.biomc2  mosaicTreeFreq.txt  mosaicTrees-MAP.tre  mosaicTrees.tre  paup.nexus  paup.tre  post.dist  post.tree  recSequences.txt
src/: Makefile.am  Makefile.in  biomc2.c  biomc2.h  biomc2_rng.c  biomc2_rng.h  chain_data.c  chain_data.h  config.h.in~  convergence.c  convergence.h  empirical_frequency.c  empirical_frequency.h  hashtable.c  hashtable.h  likelihood.c  likelihood.h  linked_topol.c  linked_topol.h  main.c  main_distance.c  main_distance_original.c  main_sprdist.c  main_summary.c  nexus.c  nexus.h  nexus_alignment.c  nexus_tree.c  phylogeny.c  phylogeny.h  run_sampler.c  run_sampler.h  spr.c  spr.h  summary.c  summary.h  summary_cluster.c  summary_plot.c  topology.c  topology.h  (+5 more)
